--- a/style.css
+++ b/style.css
@@ -22,11 +22,26 @@ main {
   height: 100vh;
 }
 
+.card-strap {
+  position: absolute;
+  z-index: 2;
+  left: calc(50% - 32px);
+}
+
+.card-strap-pocket {
+  position: absolute;
+  z-index: 1;
+  top: 154px;
+  left: calc(50% - 40px);
+}
+
 .container {
   max-width: 250px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+
+  border-radius: 10px;
 
   color: var(--gray);
 }
